--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta name="description" content="">
 		<meta name='copyright' content=''>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		
+
 		<!-- Title -->
         <title>Mediplus - Free Medical and Doctor Directory HTML Template.</title>
-		
+
 		<!-- Favicon -->
         <link rel="icon" href="img/favicon.png">
-		
+
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
@@ -36,22 +36,22 @@
         <link rel="stylesheet" href="css/animate.min.css">
 		<!-- Magnific Popup CSS -->
         <link rel="stylesheet" href="css/magnific-popup.css">
-		
+
 		<!-- Medipro CSS -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/responsive.css">
-		
+
     </head>
     <body>
-	
+
 		<!-- Preloader -->
         <div class="preloader">
             <div class="loader">
                 <div class="loader-outter"></div>
                 <div class="loader-inner"></div>
 
-                <div class="indicator"> 
+                <div class="indicator">
                     <svg width="16px" height="12px">
                         <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
                         <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- End Preloader -->
-		
+
 		<!-- Get Pro Button -->
 		<ul class="pro-features">
 			<a class="get-pro" href="#">Get Pro</a>
@@ -76,7 +76,7 @@
 				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
 			</div>
 		</ul>
-	
+
 		<!-- Header Area -->
 		<header class="header" >
 			<!-- Topbar -->
@@ -160,7 +160,7 @@
 			<!--/ End Header Inner -->
 		</header>
 		<!-- End Header Area -->
-		
+
 		<!-- Slider Area -->
 		<section class="slider">
 			<div class="hero-slider">
@@ -221,7 +221,7 @@
 			</div>
 		</section>
 		<!--/ End Slider Area -->
-		
+
 		<!-- Start Schedule Area -->
 		<section class="schedule">
 			<div class="container">
@@ -291,7 +291,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Are Always Ready to Help You & Your Family</h2>
+							<h2>We Are Always Ready to Help You & Your Family 123</h2>
 							<img src="img/section-img.png" alt="#">
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
 						</div>
@@ -326,7 +326,7 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-stethoscope"></i>
 							</div>
-							<h3>Medical Treatment</h3>
+							<h3>Medical Treatment 123</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
 						<!-- End Single features -->
@@ -335,7 +335,7 @@
 			</div>
 		</section>
 		<!--/ End Feautes -->
-		
+
 		<!-- Start Fun-facts -->
 		<div id="fun-facts" class="fun-facts section overlay">
 			<div class="container">
@@ -388,7 +388,7 @@
 			</div>
 		</div>
 		<!--/ End Fun-facts -->
-		
+
 		<!-- Start Why choose -->
 		<section class="why-choose section" >
 			<div class="container">
@@ -449,7 +449,7 @@
 			</div>
 		</section>
 		<!--/ End Why choose -->
-		
+
 		<!-- Start Call to action -->
 		<section class="call-action overlay" data-stellar-background-ratio="0.5">
 			<div class="container">
@@ -468,7 +468,7 @@
 			</div>
 		</section>
 		<!--/ End Call to action -->
-		
+
 		<!-- Start portfolio -->
 		<section class="portfolio section" >
 			<div class="container">
@@ -524,7 +524,7 @@
 			</div>
 		</section>
 		<!--/ End portfolio -->
-		
+
 		<!-- Start service -->
 		<section class="services section">
 			<div class="container">
@@ -543,7 +543,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-prescription"></i>
 							<h4><a href="service-details.html">General Treatment</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -552,7 +552,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-tooth"></i>
 							<h4><a href="service-details.html">Teeth Whitening</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -561,7 +561,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-heart-alt"></i>
 							<h4><a href="service-details.html">Heart Surgery</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -570,7 +570,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-listening"></i>
 							<h4><a href="service-details.html">Ear Treatment</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -579,7 +579,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-eye-alt"></i>
 							<h4><a href="service-details.html">Vision Problems</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -588,7 +588,7 @@
 						<div class="single-service">
 							<i class="icofont icofont-blood"></i>
 							<h4><a href="service-details.html">Blood Transfusion</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -596,7 +596,7 @@
 			</div>
 		</section>
 		<!--/ End service -->
-		
+
 		<!-- Pricing Table -->
 		<section class="pricing-table section">
 			<div class="container">
@@ -621,7 +621,7 @@
 								<h4 class="title">Plastic Suggery</h4>
 								<div class="price">
 									<p class="amount">$199<span>/ Per Visit</span></p>
-								</div>	
+								</div>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
@@ -649,7 +649,7 @@
 								<h4 class="title">Teeth Whitening</h4>
 								<div class="price">
 									<p class="amount">$299<span>/ Per Visit</span></p>
-								</div>	
+								</div>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
@@ -677,7 +677,7 @@
 								<h4 class="title">Heart Suggery</h4>
 								<div class="price">
 									<p class="amount">$399<span>/ Per Visit</span></p>
-								</div>	
+								</div>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
@@ -694,13 +694,13 @@
 						</div>
 					</div>
 					<!-- End Single Table-->
-				</div>	
-			</div>	
-		</section>	
+				</div>
+			</div>
+		</section>
 		<!--/ End Pricing Table -->
-		
-		
-		
+
+
+
 		<!-- Start Blog Area -->
 		<section class="blog section" id="blog">
 			<div class="container">
@@ -766,7 +766,7 @@
 			</div>
 		</section>
 		<!-- End Blog Area -->
-		
+
 		<!-- Start clients -->
 		<div class="clients overlay">
 			<div class="container">
@@ -806,7 +806,7 @@
 			</div>
 		</div>
 		<!--/Ens clients -->
-		
+
 		<!-- Start Appointment -->
 		<section class="appointment">
 			<div class="container">
@@ -897,7 +897,7 @@
 			</div>
 		</section>
 		<!-- End Appointment -->
-		
+
 		<!-- Start Newsletter Area -->
 		<section class="newsletter section">
 			<div class="container">
@@ -925,7 +925,7 @@
 			</div>
 		</section>
 		<!-- /End Newsletter Area -->
-		
+
 		<!-- Footer Area -->
 		<footer id="footer" class="footer ">
 			<!-- Footer Top -->
@@ -957,7 +957,7 @@
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>	
+											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>
 										</ul>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
@@ -966,7 +966,7 @@
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Finance</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Testimonials</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>FAQ</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>	
+											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>
 										</ul>
 									</div>
 								</div>
@@ -1013,7 +1013,7 @@
 			<!--/ End Copyright -->
 		</footer>
 		<!--/ End Footer Area -->
-		
+
 		<!-- jquery Min JS -->
         <script src="js/jquery.min.js"></script>
 		<!-- jquery Migrate JS -->
